--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -123,7 +123,7 @@
                     <a class="nav-link active text-white" aria-current="page" href="/mua-ve">MUA VÉ</a>
                 </li>
                 <li class="nav-item dropdown menu">
-                    <a class="nav-link dropdown-toggle text-white" href="/phim-dang-chieu" role="button" data-bs-toggle=""
+                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle=""
                         aria-expanded="false">
                         PHIM
                     </a>
@@ -180,8 +180,9 @@
         window.location.href = '/'
     })
 
-    const logout = document.getElementById("logout")
-    logout.addEventListener("click", function (e) {
+    {{#if nameUser}}
+        const logout = document.getElementById("logout")
+        logout.addEventListener("click", function (e) {
         fetch("/logout", {
             method: "POST",
         })
@@ -191,5 +192,6 @@
             .catch((error) => {
                 console.log("Lỗi khi gửi yêu cầu đăng xuất", error);
             });
-    });
+        });
+    {{/if}}
 </script>
